# keycloak

./: Cargo.toml  README.md  docker-compose.yml  rust-toolchain.toml  update.sh  update.ts
.github/workflows/: integration.yml  rust.yml
api/: openapi.json
docker/: Dockerfile  Dockerfile.docs
docs/: openapi.json  rest-api.html
examples/: adduser.rs  gen.rs  genrest.rs  importconfig.rs  metadata.xml  openapi.patch.toml  openapi.rs  resource_adduser.rs  stream.toml
examples/common/: mod.rs
src/: builder.rs  error.rs  lib.rs  prelude.rs  types.rs
src/resource/: all.rs  attack_detection.rs  authentication_management.rs  client_attribute_certificate.rs  client_initial_access.rs  client_registration_policy.rs  client_role_mappings.rs  client_scopes.rs  clients.rs  component.rs  groups.rs  identity_providers.rs  key.rs  mod.rs  organizations.rs  other_methods.rs  protocol_mappers.rs  realms_admin.rs  role_mapper.rs  roles.rs  roles_by_id.rs  scope_mappings.rs  users.rs  workflow_steps.rs  workflows.rs
src/rest/: default_response.rs  generated_rest.rs  manual_rest.rs  mod.rs  rest.rs  token_suppliers.rs  url_enc.rs
src/rest/generated_rest/: attack_detection.rs  authentication_management.rs  client_attribute_certificate.rs  client_initial_access.rs  client_registration_policy.rs  client_role_mappings.rs  client_scopes.rs  clients.rs  component.rs  groups.rs  identity_providers.rs  key.rs  mod.rs  organizations.rs  other_methods.rs  protocol_mappers.rs  realms_admin.rs  role_mapper.rs  roles.rs  roles_by_id.rs  scope_mappings.rs  users.rs  workflow_steps.rs  workflows.rs
templates/: README.md
templates/src/: lib.rs
