[package]
name = "keycloak"
version = "21.0.100"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2021"
categories = ["api-bindings", "asynchronous"]
description = """
Keycloak Admin REST API.
"""
homepage = "https://github.com/kilork/keycloak"
keywords = ["api", "async", "keycloak", "rest"]
license = "Unlicense OR MIT"
repository = "https://github.com/kilork/keycloak"
rust-version = "1.58"

[features]
schemars = ["dep:schemars"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_with = "2"
async-trait = "0.1"
schemars = { version = "0.8.11", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
scraper = "0.15"
heck = "0.4"
structopt = "0.3"
toml = "0.7"
