[package]
name = "keycloak"
version = "26.1.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2021"
categories = ["api-bindings", "asynchronous"]
description = """
Keycloak Admin REST API.
"""
homepage = "https://github.com/kilork/keycloak"
keywords = ["api", "async", "keycloak", "rest"]
license = "Unlicense OR MIT"
repository = "https://github.com/kilork/keycloak"
rust-version = "1.74"

[features]
default = ["tags-all"]
schemars = ["dep:schemars"]
rc = ["rc-map", "rc-str", "rc-val", "rc-vec"]
rc-map = ["serde/rc"]
rc-str = ["serde/rc"]
rc-val = ["serde/rc"]
rc-vec = ["serde/rc"]
tags-all = ["tag-attack-detection", "tag-authentication-management", "tag-client-attribute-certificate", "tag-client-initial-access", "tag-client-registration-policy", "tag-client-role-mappings", "tag-client-scopes", "tag-clients", "tag-component", "tag-groups", "tag-identity-providers", "tag-key", "tag-organizations", "tag-protocol-mappers", "tag-realms-admin", "tag-role-mapper", "tag-roles", "tag-roles-by-id", "tag-scope-mappings", "tag-users"]
tag-attack-detection = []
tag-authentication-management = []
tag-client-attribute-certificate = []
tag-client-initial-access = []
tag-client-registration-policy = []
tag-client-role-mappings = []
tag-client-scopes = []
tag-clients = []
tag-component = []
tag-groups = []
tag-identity-providers = []
tag-key = []
tag-organizations = []
tag-protocol-mappers = []
tag-realms-admin = []
tag-role-mapper = []
tag-roles = []
tag-roles-by-id = []
tag-scope-mappings = []
tag-users = []

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
async-trait = "0.1"
schemars = { version = "0.8.11", default-features = false, features = [
    "derive",
], optional = true }
percent-encoding = "2.3.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
heck = "0.5"
clap = { version = "4", features = ["derive", "std"], default-features = false }
toml = "0.8"
serde = { version = "1", features = ["derive", "rc"] }
indexmap = { version = "2", features = ["serde"] }
